--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,13 +79,13 @@
     
                 <div class="nav__mypage__box">
                     <div class="mypage__login__box">
-                        <div class="login-icon"></div>
+                        <div class="i-user"></div>
                         <div class="login-text">로그인</div>
                     </div>
                     <div class="mypage__cart__box">
-                        <div class="cart-icon"></div>
-                        <div class="cart-text">최근본 상품</div>
-                        <div class="cart-drop-icon"></div>
+                        <div class="i-cart"></div>
+                        <div class="cart__box-text">최근본 상품</div>
+                        <div class="i-down-arrow"></div>
                     </div>
                 </div>
             </div>
