[test] fetch data and add it in html with js

--- a/shoppingHow/public/stylesheets/style.scss
+++ b/shoppingHow/public/stylesheets/style.scss
@@ -147,16 +147,59 @@ main {
     margin: 0 auto;
     .main_container {
       width: 100%;
+
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr 1fr 1fr;
     }
     .section_best {
       width: 510px;
+      height: 340px;
       padding: 0 12.5px;
     }
     .section_themes {
       width: 764px;
+      height: 340px;
+      position: relative;
+      .slide_box {
+        width: 514px;
+        height: 100%;
+        margin: 0 auto;
+        overflow: hidden;
+      }
+      .slide_paging {
+        .prev_button {
+          position: absolute;
+          left: 0;
+          top: 36%;
+          font-size: 60px;
+          color: #dedede;
+          font-weight: lighter;
+        }
+
+        .next_button {
+          position: absolute;
+          right: 0;
+          top: 36%;
+          font-size: 60px;
+          font-weight: lighter;
+          color: #dedede;
+        }
+
+        .slide_paging_square {
+          position: absolute;
+          bottom: 20%;
+          font-size: 1px;
+          color: #808080;
+          left: 46%;
+          .page {
+            background: #808080;
+            display: inline;
+            padding: 0 6px;
+            margin: 0 2px;
+          }
+        }
+      }
     }
     .section_products {
       grid-column: 1/3;
