--- a/shoppingHow/views/index.ejs
+++ b/shoppingHow/views/index.ejs
@@ -70,7 +70,20 @@
               src="//shop4.daumcdn.net/shophow/sib/0_210219174900_cCDgZtbAhPiBQqcJamsODOWNoVrXILeM"
             />
           </section>
-          <section class="section_themes">커피메이커</section>
+          <section class="section_themes">
+            <div class="slide_box">
+              <ul class="slide_list"></ul>
+            </div>
+            <div class="slide_paging">
+              <ul class="slide_paging_square">
+                <li class="page">1</li>
+                <li class="page">2</li>
+                <li class="page">3</li>
+              </ul>
+              <button class="prev_button">〈</button>
+              <button class="next_button">〉</button>
+            </div>
+          </section>
           <section class="section_products">
             그리드박스
             <button>더보기</button>
