[change] PR Review: ul,li => div

--- a/shoppingHow/public/stylesheets/style.scss
+++ b/shoppingHow/public/stylesheets/style.scss
@@ -111,7 +111,7 @@ header {
       .nav_right {
         .user {
           display: flex;
-          li {
+          div {
             padding: 0 10px;
           }
 
