--- a/shopping_how/public/stylesheets/style.css
+++ b/shopping_how/public/stylesheets/style.css
@@ -7,7 +7,7 @@
   box-sizing: border-box; }
 
 html {
-  background-color: #fff;
+  background-color: #f3f3f3;
   color: black;
   scroll-behavior: smooth;
   font-weight: 400;
@@ -40,9 +40,9 @@ header {
   min-width: 977px;
   height: 6.5rem;
   position: relative;
-  padding-top: 43px;
-  box-shadow: 0 1px #c7c6c6; }
+  padding-top: 43px; }
   header .header__top {
+    background-color: #fff;
     display: inline-block;
     vertical-align: top; }
     header .header__top::after {
@@ -77,12 +77,13 @@ header {
         border: 0; }
   header .nav-container {
     margin-top: 40px;
-    border-top: 1px solid #efefef; }
+    border-top: 1px solid #efefef;
+    box-shadow: 0 1px #c7c6c6; }
     header .nav-container div {
       width: 1276px;
       margin: 0 auto;
       position: relative;
-      padding: 19px 0; }
+      padding: 19px 0 19px 20px; }
       header .nav-container div::after {
         content: "";
         clear: both;
@@ -99,7 +100,7 @@ header {
         float: left; }
       header .nav-container div:first-child {
         display: block;
-        height: 54px;
+        height: 56px;
         font-weight: 700;
         font-size: 16px; }
         header .nav-container div:first-child .nav_first__button {
@@ -148,7 +149,7 @@ header {
         font-weight: 500;
         font-size: 16px;
         float: right; }
-        header .nav-container div .nav_last .nav_last__list {
+        header .nav-container div .nav_last li {
           display: inline-block;
           position: relative;
           float: left;
@@ -243,4 +244,54 @@ header {
 
 .main,
 .hot-deal {
-  background-color: #f3f3f3; }
+  background-color: #f3f3f3;
+  position: relative; }
+
+.grid_container {
+  width: 1276px;
+  margin: 0.7rem 10.5rem 0 10.5rem;
+  display: grid;
+  grid-gap: 1px 1px;
+  grid-template-rows: repeat(3, 340px, 276px, 73px);
+  grid-template-columns: repeat(5, 1fr);
+  border: 1px solid #dddcdc; }
+  .grid_container .cell {
+    border: 1px solid #f1f1f1;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    position: relative;
+    height: 276px;
+    background-size: cover; }
+  .grid_container .cell:nth-child(1) {
+    grid-column: 1 / 3;
+    height: 340px; }
+  .grid_container .cell:nth-child(2) {
+    grid-column: 3 / 6;
+    height: 340px; }
+  .grid_container .cell:last-child {
+    grid-column: 1 / 6;
+    height: 73px; }
+  .grid_container li {
+    padding: 21px 27px;
+    height: 276px;
+    text-align: left;
+    border-bottom: 0 none;
+    position: relative;
+    line-height: 14px;
+    letter-spacing: -1px;
+    background-size: cover; }
+    .grid_container li img {
+      width: 100%; }
+
+.btn-more-info {
+  height: 100%;
+  width: 100%;
+  border: none;
+  font-size: 0.5rem;
+  border: 2px solid #f1f1f1;
+  border-bottom: 4px solid #f1f1f1;
+  background-color: #dedada;
+  cursor: pointer; }
