--- a/frontend/src/components/Header/header.scss
+++ b/frontend/src/components/Header/header.scss
@@ -1,5 +1,69 @@
-.header {
+
+
+header {
+
   section {
-    width: 100%;
+    display: flex;
   }
+  .wrapper {
+    display: flex;
+  }
+
+  .logo-and-search-area {
+    margin-top: 43px;
+    
+    .logo {
+      margin-right: 24px;
+      display:flex;
+
+      img {
+        width: 119px;
+      }
+    }
+
+    .search-bar {
+      width: 670px;
+      
+      display:flex;
+
+      .rolling-keywords-input {
+        width: 100%;
+        
+        input {
+          width: 100%;
+          height: 100%;
+          box-sizing: border-box;
+        }
+      }
+    }
+  }
+  
+  .nav-area {
+    margin-top: 40px;
+
+    nav {
+      width: 973px;
+
+      display:flex;
+
+      .contents {
+        display: flex;
+        
+        ul, li { 
+          display: flex;
+          width: 100%;
+        }
+        
+        li { 
+          flex-grow: 1; 
+        }
+      }
+
+      .left, .center, .right { // 각각 맞는 영역 크기로 변경 예정
+        flex-grow:1;
+      }
+
+    }
+  }
+
 }
