Feat. slide시 paging button 체크

--- a/public/src/css/partials/main.scss
+++ b/public/src/css/partials/main.scss
@@ -142,7 +142,8 @@ main {
       .paging-first {
         margin: 0;
       }
-      .btn-paging:hover {
+      .btn-paging:hover,
+      .current-page {
         opacity: 1;
       }
     }
