--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -7,19 +7,22 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>SHOWPPING_HOW</title>
       <link rel="stylesheet" href="style.css" />
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
 
    </head>
 
 
    <body>
-      <div class="head">
+
+      <header class="head">
          <div class="area_headtop">
             <div class="banner">
                <a href="#" class="link">
-                  <img src="https://search1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/logo_shw.png"
-                     alt="쇼핑하우">
+                  <img src="/img/logo.png" alt="쇼핑하우">
                </a>
             </div>
+
             <div class="search">
                <form action="" role="search" class="search_form">
                   <div class="search_box">
@@ -94,10 +97,11 @@
                </ul>
             </div>
          </div>
-      </div>
+         </div>
+      </header>
 
-      <div class="body">
-         <div class="section_top">
+      <section class="body">
+         <div class="section_top wrap">
             <div class="evt_main">
                <div class="banner_area">
                   <a href="#">
@@ -105,16 +109,134 @@
                   </a>
                </div>
                <div class="slide_area">
-                  {{{ index }}}
-                  <div class="slide"></div>
+                  <div class="slide_prev_main_next">
+                     <button class="prev">
+                        <span>이전</span>
+                     </button>
+                     <div class="slide">
+                        {{!-- fetch_img_insertArea --}}
+                     </div>
+                     <button class="next">
+                        <span>다음</span>
+                     </button>
+                  </div>
                   <div class="slide_ctrl"></div>
+                  {{!-- {{{body}}} --}}
                </div>
             </div>
-            <div class="evt_list"></div>
-            <div class="section_hot_deal"></div>
-
+            <div class="evt_list">
+               <ul class="panel">
+                  <li class="panel_list">
+                     <a href="#">
+                        <img
+                           src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
+                        <p>안정적인 그립감의 핸들커버</p>
+                        <span>스타일리시함까지 갖춘 차량 아이템</span>
+                        <span class="theme_icon">테마</span>
+                     </a>
+                  </li>
+                  <li class="panel_list">
+                     <a href="#">
+                        <img
+                           src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
+                        <p>안정적인 그립감의 핸들커버</p>
+                        <span>스타일리시함까지 갖춘 차량 아이템</span>
+                        <span class="theme_icon">테마</span>
+                     </a>
+                  </li>
+                  <li class="panel_list">
+                     <a href="#">
+                        <img
+                           src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
+                        <p>안정적인 그립감의 핸들커버</p>
+                        <span>스타일리시함까지 갖춘 차량 아이템</span>
+                        <span class="theme_icon">테마</span>
+                     </a>
+                  </li>
+                  <li class="panel_list">
+                     <a href="#">
+                        <img
+                           src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
+                        <p>안정적인 그립감의 핸들커버</p>
+                        <span>스타일리시함까지 갖춘 차량 아이템</span>
+                        <span class="theme_icon">테마</span>
+                     </a>
+                  </li>
+                  <li class="panel_list">
+                     <a href="#">
+                        <img
+                           src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
+                        <p>안정적인 그립감의 핸들커버</p>
+                        <span>스타일리시함까지 갖춘 차량 아이템</span>
+                        <span class="theme_icon">테마</span>
+                     </a>
+                  </li>
+               </ul>
+               <button class="see_more_btn">더보기(1/279건) ⩒</button>
+            </div>
          </div>
-      </div>
+      </section>
+
+
+      <section class="section_hot_deal wrap">
+         <h3>지금뜨는 테마 카테고리</h3>
+         <div class="hot_deal_list">
+            <button class="prev"></button>
+            <ul class="panel">
+
+
+               <li class="panel_list">
+                  <a href="#">
+                     <img
+                        src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
+                     <p>안정적인 그립감의 핸들커버</p>
+                     <span>스타일리시함까지 갖춘 차량 아이템</span>
+                     <span class="theme_icon">테마</span>
+                  </a>
+               </li>
+               <li class="panel_list">
+                  <a href="#">
+                     <img
+                        src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
+                     <p>안정적인 그립감의 핸들커버</p>
+                     <span>스타일리시함까지 갖춘 차량 아이템</span>
+                     <span class="theme_icon">테마</span>
+                  </a>
+               </li>
+               <li class="panel_list">
+                  <a href="#">
+                     <img
+                        src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
+                     <p>안정적인 그립감의 핸들커버</p>
+                     <span>스타일리시함까지 갖춘 차량 아이템</span>
+                     <span class="theme_icon">테마</span>
+                  </a>
+               </li>
+               <li class="panel_list">
+                  <a href="#">
+                     <img
+                        src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
+                     <p>안정적인 그립감의 핸들커버</p>
+                     <span>스타일리시함까지 갖춘 차량 아이템</span>
+                     <span class="theme_icon">테마</span>
+                  </a>
+               </li>
+               <li class="panel_list">
+                  <a href="#">
+                     <img
+                        src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
+                     <p>안정적인 그립감의 핸들커버</p>
+                     <span>스타일리시함까지 갖춘 차량 아이템</span>
+                     <span class="theme_icon">테마</span>
+                  </a>
+               </li>
+
+            </ul>
+            <button class="next"></button>
+         </div>
+         </div>
+      </section>
+      <script type="module" src="play.js"></script>
    </body>
 
 </html>
