feat : image 라우터 추가, client 서버에서 express에 요청 후 응답 확인

--- a/views/index.html
+++ b/views/index.html
@@ -56,10 +56,22 @@
     <main>
       <section class="section-top">
         <div class="section-top__container">
-          <div class="main__top__items" id="items-left">코트</div>
+          <div class="main__top__items" id="items-left">
+            <img
+              src="http://shop4.daumcdn.net/shophow/sib/0_210219174900_cCDgZtbAhPiBQqcJamsODOWNoVrXILeM"
+            />
+          </div>
           <div class="main__top__items" id="items-carousel">
             <button>왼</button>
-            <div class="items-carousel__img">커피메이커</div>
+            <div class="items-carousel__img">
+              <img
+                src="//shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD"
+                width="485"
+                height="340"
+                class="img_g"
+                alt=""
+              />
+            </div>
             <div class="items-carousel__slider">
               <span>1</span>
               <span>2</span>
@@ -86,7 +98,7 @@
       </section>
     </main>
 
-    <!-- <section class="carousel">
+    <section class="carousel">
       <div class="carousel__title">지금뜨는 테마 카테고리</div>
       <ul class="carousel_items">
         <li>깔끔한 감성 가구 #두닷</li>
@@ -165,6 +177,6 @@
     </p></footer>
     <small class="copyright">Copyright © daisycommerce Corp. All rights reserved.</small>
 
-    <script src="./main.js"></script> -->
+    <script src="../public/javascripts/main.js"></script>
   </body>
 </html>
