--- a/shopping/public/stylesheets/sass/components/componet.sass
+++ b/shopping/public/stylesheets/sass/components/componet.sass
@@ -1,3 +1,5 @@
+$--list-border: 1px solid rgba(0, 0, 0,0.05)
+
 .icon
     background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
     background-size: 130px 90px
@@ -7,6 +9,16 @@
     width: 28px
     height: 28px
 
+.icon_slide
+    display: inline-block
+    overflow: hidden
+    width: 15px
+    height: 25px
+    font-size: 0
+    line-height: 0
+    background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png) no-repeat;
+    text-indent: -9999px
+
 .bar
     float: left
     width: 1px
@@ -15,14 +27,17 @@
     background-color: #e3e3e3
 
 .shoppinglists
-    float: bottom
-    display: flex
+    float: left
+    overflow: hidden
+    width: 1275px
 .shoppinglist
+    float: left
     width: 200px
     height: 276px
     padding: 21px
     border-bottom: 0 none
-    border: 0.5px solid rgba(0, 0, 0,0.05 )
+    border-top: $--list-border
+    border-right: $--list-border
     img
         width: 200px
         aspect-ratio: auto 200 / 200
