--- a/shopping/public/stylesheets/style.css
+++ b/shopping/public/stylesheets/style.css
@@ -8,6 +8,16 @@
   width: 28px;
   height: 28px; }
 
+.icon_slide {
+  display: inline-block;
+  overflow: hidden;
+  width: 15px;
+  height: 25px;
+  font-size: 0;
+  line-height: 0;
+  background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png) no-repeat;
+  text-indent: -9999px; }
+
 .bar {
   float: left;
   width: 1px;
@@ -16,15 +26,18 @@
   background-color: #e3e3e3; }
 
 .shoppinglists {
-  float: bottom;
-  display: flex; }
+  float: left;
+  overflow: hidden;
+  width: 1275px; }
 
 .shoppinglist {
+  float: left;
   width: 200px;
   height: 276px;
   padding: 21px;
   border-bottom: 0 none;
-  border: 0.5px solid rgba(0, 0, 0, 0.05); }
+  border-top: 1px solid rgba(0, 0, 0, 0.05);
+  border-right: 1px solid rgba(0, 0, 0, 0.05); }
   .shoppinglist img {
     width: 200px;
     aspect-ratio: auto 200 / 200;
@@ -157,8 +170,46 @@ header {
       aspect-ratio: auto 485 / 340;
       height: 340px; }
   .main__banner__top .banner__right {
+    position: relative;
+    float: right;
     width: 485px;
     height: 340px; }
+
+.banner__right__btns {
+  position: absolute;
+  top: 283px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  clear: both; }
+
+.prev {
+  position: absolute;
+  top: -4px;
+  left: 160px;
+  background-position: -128px -335px; }
+
+.next {
+  right: 160px;
+  background-position: -145px -335px;
+  position: absolute;
+  top: -4px; }
+
+.inner_paging {
+  display: inline-block; }
+  .inner_paging span {
+    margin-left: 3px;
+    float: left;
+    padding: 5px 0; }
+    .inner_paging span .num_page {
+      width: 15px;
+      height: 5px;
+      font-size: 0;
+      line-height: 0; }
+    .inner_paging span .unselected {
+      background-color: #ccc; }
+    .inner_paging span .selected {
+      background-color: #000; }
 
 body {
   height: 500vh;
