--- a/shopping/views/index.ejs
+++ b/shopping/views/index.ejs
@@ -60,7 +60,24 @@
         <div class="banner__left">
           <img src="<%= event.event.imgurl %>">
         </div>
-        <div class="banner__right"></div>
+        <div class="banner__right">
+          <div class="banner__right__btns">
+            <button class="icon_slide prev"></button>
+            <span class="inner_paging">
+              <span>
+                <div class="num_page selected">1</div>
+              </span>
+              <span>
+                <div class="num_page unselected">2</div>
+              </span>
+              <span>
+                <div class="num_page unselected">3</div>
+              </span>
+          
+            </span>
+            <button class="icon_slide next"></button>
+          </div>
+        </div>
       </div>
       <ul class="shoppinglists">
         <li class="shoppinglist">
