--- a/shopping/public/stylesheets/reset.css
+++ b/shopping/public/stylesheets/reset.css
@@ -127,3 +127,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+button {
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border-radius: 0;
+}
