--- a/beemo/views/main.html
+++ b/beemo/views/main.html
@@ -87,15 +87,19 @@
           </div>
           <div class="main__first_line__right">
             <div class="main__first_line__right__box">
-              <img src="./images/ex2.jpg" alt="">
+              <div>
+                <img src="./images/ex2.jpg" alt="">
+                <img src="./images/ex3.jpg" alt="">
+                <img src="./images/ex4.jpg" alt="">
+              </div>
             </div>
             <div class="main__first_line__right__nav">
               <span class="main__first_line__right__nav--dotted">aaa</span>
               <button class="main__first_line__right__nav--left_button">
-                <span></span>
+                <span><img src="./images/magnifyingGlass.svg" alt=""></span>
               </button>
               <button class="main__first_line__right__nav--right_button">
-                <span></span>
+                <span><img src="./images/magnifyingGlass.svg" alt=""></span>
               </button>
             </div>
           </div>
