Do many things..
* added simple server
* implemented main event slide's controller UI
* enhanced '.scss'

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -13,6 +13,11 @@ a {
   text-decoration: none;
 }
 
+button {
+  border: none;
+  background-color: transparent;
+}
+
 .clear-both {
   clear: both;
 }
