carousel 무한서클구현.

--- a/public/carousel.scss
+++ b/public/carousel.scss
@@ -1,6 +1,12 @@
 .moveLeft{
-   div{
-      transform: translate(400px);
+   div {
+      transform: translate(-485px);
+      transition: 1s
    }
-   
+}
+.moveRight{
+   div {
+      transform: translate(485px);
+      transition: 1s
+   }
 }
